# pyobs-archive

./: Dockerfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py  webpack.config.js
docs/source/: conf.py
pyobs_archive/: settings.py  urls.py  wsgi.py
pyobs_archive/api/: apps.py  authentication.py  models.py  urls.py  utils.py  views.py
pyobs_archive/api/management/commands/: check.py  delete.py  ingest.py
pyobs_archive/api/migrations/: 0001_initial.py  0002_auto_20190916_1417.py  0003_auto_20190917_1417.py  0004_frame_night.py  0005_frame_reqnum.py  0006_auto_20200130_1902.py  0007_auto_20200312_0842.py
pyobs_archive/archive/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
pyobs_archive/archive/migrations/: 0001_initial.py  0002_auto_20190819_1351.py
pyobs_archive/archive/templates/archive/: index.html
pyobs_archive/authentication/: apps.py  authentication.py  backends.py  models.py  serializers.py  views.py
pyobs_archive/authentication/migrations/: 0001_initial.py
pyobs_archive/frontend/: views.py
pyobs_archive/frontend/static/css/: styles.css
pyobs_archive/frontend/templatetags/: logolink.py  version.py
pyobs_archive/js9/: urls.py  views.py
pyobs_archive/query/: admin.py  apps.py  views.py
pyobs_archive/query/migrations/: 0001_initial.py
scripts/: ingest_image.py
src/: main.css  main.js
static/: bootstrap.min.js  main.js
static/css/: styles.css
static/js/: app.js  bootstrap.min.js  main.js
templates/: base.html
templates/registration/: login.html
(+4 files in other folders)
