[tool.poetry]
name = "pyobs-archive"
packages = [{ include = "pyobs_weather" }]
version = "1.1.3"
description = "robotic telescope software"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Django = "3.2.17"
astropy = "^5.0"
django-cors-middleware = "^1.5.0"
django-oauth-toolkit = "^1.6.3"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
matplotlib = "^3.5.1"
numpy = "^1.22.1"
psycopg2-binary = "^2.9.3"
zipstream = "^1.1.4"
django-crispy-forms = "^1.13.0"


[tool.poetry.dev-dependencies]
black = "^21.12b0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
